# flatsim

./: .clang-format  .clangd  .envrc  .execs  .gdb_history  .gitignore  .todo  =  CMakeLists.txt  CONTROLLER.md  KOKKOS.md  MASTER_SLAVE.md  Makefile  PERFORMANCE.md  PLAN.md  README.md  README_SENSORS.md  RERUN_RESET_GUIDE.md  \  devbox.json  output.tif  run.sh  sensor_test.cpp  test_tank.cpp  xmake.lua
.cache/clangd/index/: main.cpp.FA751BAE44872F1B.idx  world.cpp.2721A72281A2CB78.idx  world.cpp.71A768886E433090.idx  world.hpp.A9C44F12A2C0C811.idx
.opencode/: opencode.db-shm  opencode.db-wal
book/src/: 000_intro.md  SUMMARY.md
docs/: 000_intro.html  001_installation.html  index.html  print.html  searchindex.js  toc.html  toc.js
examples/: mvs.cpp  polygon_drawer.hpp  sensor_example.cpp  simple_polygon.cpp  test_kokkos.cpp  test_pure_pursuit.cpp  test_stanley.cpp  tractor_navigation.cpp
examples/machines/: husky.json  machine_schema.md  oxbo_harvester.json  tractor.json  trailer.json  truck.json
include/: sim.hpp
include/flatsim/: constants.hpp  exceptions.hpp  loader.hpp  machines.hpp  robot.hpp  simulator.hpp  trailer.hpp  types.hpp  utils.hpp  world.hpp
include/flatsim/robot/: controller.hpp  power.hpp  sensor.hpp  sensors.hpp  tank.hpp
include/flatsim/robot/chassis/: chassis.hpp  hitch.hpp  karosserie.hpp  section.hpp  wheel.hpp
include/flatsim/robot/sensors/: gps_sensor.hpp  imu_sensor.hpp  lidar_sensor.hpp  sensors.hpp
include/flatsim/robot/systems/: chain.hpp  control.hpp
include/flatsim/world/: layer.hpp  obstacle.hpp
include/multiverse/: constants.hpp  exceptions.hpp  machines.hpp  robot.hpp  simulator.hpp  types.hpp  utils.hpp  world.hpp
include/multiverse/driver/: controller.hpp
include/multiverse/robot/: driver.hpp  sensor.hpp  sensors.hpp
include/multiverse/robot/chasis/: chasis.hpp  hitch.hpp  karosserie.hpp  wheel.hpp
include/multiverse/robot/chassis/: chassis.hpp  hitch.hpp  karosserie.hpp  wheel.hpp
include/multiverse/robot/sensors/: gps_sensor.hpp  imu_sensor.hpp  lidar_sensor.hpp  sensors.hpp
include/multiverse/sensors/: sensor.hpp
include/multiverse/world/: layer.hpp  obstacle.hpp
src/: loader.cpp  main.cpp  mvs.cpp  robot.cpp  simulator.cpp  trailer.cpp  world.cpp
src/multiverse/: robot.cpp  simulator.cpp  world.cpp
src/multiverse/robot/: driver.cpp  sensor.cpp
src/multiverse/robot/chasis/: chasis.cpp  karosserie.cpp  wheel.cpp
src/multiverse/robot/sensors/: README.md  gps_sensor.cpp  imu_sensor.cpp
src/multiverse/world/: layer.cpp
src/robot/: controller.cpp  robot.cpp  sensor.cpp
src/robot/chasis/: chasis.cpp  hitch.cpp  karosserie.cpp  wheel.cpp
src/robot/chassis/: chassis.cpp  hitch.cpp  karosserie.cpp  section.cpp  wheel.cpp
src/robot/sensors/: gps_sensor.cpp  imu_sensor.cpp  lidar_sensor.cpp
src/robot/systems/: chain.cpp  control.cpp
src/world/: layer.cpp  robot.cpp  world.cpp
